--- a/random.html
+++ b/random.html
@@ -6,11 +6,10 @@
 	<meta name="description" content="Random Quote And Color Generator"> 
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="C://xampp/htdocs/indexhtml/still.css">
-	<link rel="stylesheet" type="text/css" href="C://xampp/htdocs/indexhtml/still.css">
+	<link rel="stylesheet" type="text/css" href="/still.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="C://xampp/htdocs/indexhtml/new-1.js"></script>
+	<script src="/new-1.js"></script>
 	</head>
 		<body>
 			<div class="giris">
